Redis-depl.yaml
apiVersion: v1 
kind: Service
metadata:
  name: redis-service
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis 
    tier: backend
---

apiVersion: app/v1
kind: Deployment
metadata:
  name: redis 
  labels:
    app: redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis 
      tier: backend 
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-persistent-volume 
          persistenceVolumeClaim:
            claimName: redis-pvc
      containers:
        - name: redis 
          image: redis:latest 
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-persistent-volume 
              mountPath: /data

          # env:
