wordpress-app1.yaml
apiVersion: v1 
kind: Service
metadata:
  name: wordpress-litespeed-service-1 
spec:
  ports:
    - port: 9090
      targetPort: 8080
  selector:
      app: wordpress-litespeed-app1 

---

apiVersion: app/v1
kind: Deployment
metadata:
  name: wordpress-litespeed-app1 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress-litespeed-app1 
    template:
      metadata:
        labels:
          app: wordpress-litespeed-app1 
        spec:
          containers:
            - name: wordpress-litespeed-app1 
              image: wordpress 
              ports:
                - containerPort: 8080
